<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidSoapServer</string>
    <string name="action_settings">Settings</string>
    <string name="start_server">Run server</string>
    <string name="stop_server">Stop server</string>
    <string name="ip_number">x.x.x.x</string>
    <string name="port_number">xxxx</string>
    <string name="port_ip_separator">:</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <string name="menu_settings">Application settings</string>
    <string name="menu_security">Server security</string>
    
    <!-- Menu -->
    <string-array name="nav_drawer_items">
        <item>Server</item>
        <item>Parameters</item>
        <item>Settings</item>
        <item>Security</item>
        <item>Logger</item>
    </string-array>
     
    <!-- Menu icons -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_server</item>
        <item>@drawable/ic_action_params</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_security</item>
        <item>@drawable/ic_action_logger</item>
    </array>
     
    <!-- Content -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- Parameters TAB -->
    <string name="port_hint">New port number</string>
    <string name="port_label">Server port number:</string>
    <string name="threads_number_hint">New number of threads</string>
    <string name="threads_number_label">Maximum number of threads allowed:</string>
    <string name="button_apply_settings">Save changes</string>
    
    <!-- Logger tab -->
    <string name="log_scroll_switch">Autoscroll is</string>
    <string name="log_scroll_enabled">enabled</string>
    <string name="log_scroll_disabled">disabled</string>

    <!-- Settings tab -->
    <string name="main_server_ip_label">Main server IP address:</string>
    <string name="main_server_ip_hint">x.x.x.x</string>
    <string name="main_server_port_label">Main server port:</string>
    
</resources>