<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/port_label"
        android:textColor="@color/defaultText"
        android:textStyle="bold"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/portNumber"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/port_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/threads_number_label"
        android:layout_below="@+id/portNumber"
        android:textColor="@color/defaultText"
        android:textStyle="bold"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/threadsNumber"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/threads_number_hint"
        android:inputType="number" />
    
    <Button
        android:id="@+id/buttonApplySettings"
        android:background="@drawable/cst_button"
        android:textColor="@drawable/cst_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_apply_settings" />

</RelativeLayout>