<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.agh.wsserver.MainActivity$PlaceholderFragment" >

    <LinearLayout android:id="@+id/ipAndPort"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
	    <TextView
	        android:id="@+id/ipTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ip_number"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/port_ip_separator"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <TextView
	        android:id="@+id/portTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/port_number"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	</LinearLayout>
	
    
    <Button
        android:id="@+id/startServerButton"
        android:background="@drawable/cst_button"
        android:textColor="@drawable/cst_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/start_server" />

    <Button
        android:id="@+id/stopServer"
        android:background="@drawable/cst_button"
        android:textColor="@drawable/cst_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startServerButton"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/stop_server" />

</RelativeLayout>
