<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="@string/main_server_ip_label"
        android:textColor="@color/defaultText"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mainServerIp"
        android:padding="10dp"
        android:text="@string/main_server_port_label"
        android:textColor="@color/defaultText"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonApplyMainServerSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="@drawable/cst_button"
        android:text="@string/button_apply_settings"
        android:textColor="@drawable/cst_button_text" />

    <EditText
        android:id="@+id/mainServerIp"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/main_server_ip_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/mainServerPort"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>